<resources>
    <string name="app_name">Task_10</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="registration">Registration</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="setting_1">Setting 1</string>
    <string name="setting_2">Setting 2</string>
    <string name="setting_3">Setting 3</string>
    <string name="profile">Profile</string>
</resources>