<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_name_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="@color/main_text_color"
        android:padding="5dp"
        android:textSize="30sp"
        android:background="@color/blue_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_page"
        app:layout_constraintVertical_bias="0.25">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:textColor="@color/main_text_color"
                android:layout_toStartOf="@+id/btn_edit_username"
                android:contextClickable="false"
                android:enabled="false"
                android:freezesText="false"
                android:hint="@string/username"
                android:inputType="textPersonName|textCapSentences"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btn_edit_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@color/main_text_color"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/blue_10"
                app:srcCompat="@android:drawable/ic_menu_edit" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="17sp"
        android:textColor="@color/main_text_color"
        android:backgroundTint="@color/blue_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:backgroundTint="#22FF0000"
        android:textColor="@color/main_text_color"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>